# projeto_SOTC

./: .gitignore.txt  CMakeLists.txt  Filtros.cpp  Filtros.h  README.md  main.cpp
